# Multi-Agent-Orch

./: .gitignore  Dockerfile  docker-compose.yml  plan.md  pyproject.toml
kubernetes/: configmap.yaml  deployment.yaml  secret.yaml
src/: config.py  main.py
src/agent_graph/: edges.py  graph.py  state.py
src/agent_graph/nodes/: architect.py  coder.py  documenter.py  reviewer.py  tester.py
src/api/: routes.py  schemas.py
src/llm/: client.py
src/storage/: persistence.py
src/tools/: __init__.py  file_ops.py  shell.py
tests/: conftest.py  test_graph.py
